[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "boto3>=1.35.98",
    "botocore>=1.35.98",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "plotly>=5.24.1",
    "pylint>=3.3.3",
    "pyyaml>=6.0.2",
]
